menu catalog mobil & main page mobil

--- a/src/pug/components/DiscountsProducts.pug
+++ b/src/pug/components/DiscountsProducts.pug
@@ -171,6 +171,7 @@
                               else
                                   img(src="assets/images/other/not-stock.svg")
                                   span Нет в наличии
+                          .product-card__name= product.name
                           .product-card__bottom
                               .product-card__price
                                   if product.discount
