--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -7,20 +7,22 @@ block variables
 
 doctype html
 html
-	head
-		title #{title}
-		meta(charset='utf-8')
-		meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-		+style('libs.min.css')
-		+style('global.css')
-		+style('common.css')
-		block styles
-	body
-		.content
-			include ../partials/header.pug
-			block content
-		include ../partials/footer.pug
-		+script('libs.min.js')
-		+script('global.min.js')
-		+script('main.min.js')
-		block scripts
+  head
+    title #{title}
+    meta(charset='utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    +style('libs.min.css')
+    +style('global.css')
+    +style('common.css')
+    +style('MenuCatalog.css')
+    block styles
+  body
+    .content
+      include ../partials/header.pug
+      include ../components/MenuCatalog.pug
+      block content
+    include ../partials/footer.pug
+    +script('libs.min.js')
+    +script('global.min.js')
+    +script('main.min.js')
+    block scripts
