--- a/src/styles/MainSections.sass
+++ b/src/styles/MainSections.sass
@@ -12,6 +12,8 @@
     display: flex
     justify-content: center
     align-items: center
+    @media (max-width: 390px)
+      height: 200px
     &:nth-child(1n)
       background-color: #e1f5fd
     &:nth-child(2n)
