--- a/src/styles/News.sass
+++ b/src/styles/News.sass
@@ -26,6 +26,8 @@
       font-size: 18px
       line-height: 130%
       color: #0f0f0f
+      @media (max-width: 1300px)
+        font-size: 14px
     &__description
       position: absolute
       right: 15px
@@ -35,3 +37,5 @@
       font-size: 16px
       line-height: 130%
       color: #737373
+      @media (max-width: 1300px)
+        font-size: 12px
