--- a/src/styles/partials/footer.sass
+++ b/src/styles/partials/footer.sass
@@ -7,10 +7,19 @@
     display: flex
     padding: 50px 0
     border-bottom: 1px solid #363636
+    @media (max-width: 1200px)
+      flex-direction: column
+      gap: 40px
     &__left,
     &__right
       display: flex
       gap: 76px
+    &__right
+      @media (max-width: 770px)
+        flex-direction: column
+    &__left
+      @media (max-width: 500px)
+        flex-direction: column
   &-column
     max-width: 402px
     &__navs
@@ -63,6 +72,10 @@
       flex-direction: column
       gap: 20px
       box-sizing: border-box
+      @media (max-width: 450px)
+        width: 100% !important
+      @media (max-width: 330px)
+        height: 290px
       &-address
         font-weight: 600
         font-size: 18px
@@ -80,13 +93,22 @@
       &-contacts
         display: flex
         justify-content: space-between
+        @media (max-width: 330px)
+          flex-direction: column
+          gap: 20px
   &-bottom
     display: flex
     justify-content: space-between
     padding: 20px 0 30px 0
+    @media (max-width: 1050px)
+      flex-direction: column
+      gap: 20px
     &__left
       display: flex
       gap: 50px
+      @media (max-width: 1050px)
+        flex-direction: column
+        gap: 20px
   &__line
     font-weight: 400
     font-size: 14px
