start catalog page

--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -15,6 +15,7 @@ html
     +style('global.css')
     +style('common.css')
     +style('MenuCatalog.css')
+    +style('MobilMenu.css')
     block styles
   body
     .content
