--- a/src/styles/partials/header.sass
+++ b/src/styles/partials/header.sass
@@ -64,6 +64,8 @@
     background-color: $black
     color: $white
     font-size: 14px
+    a
+      color: #ffffff
     &__wrap
       display: flex
       justify-content: space-between
@@ -91,6 +93,8 @@
     padding: 4px 0 8px 0
     box-shadow: 0 6px 24px 0 rgba(0, 0, 0, 0.06)
     font-size: 16px
+    a
+      color: $black
     &__cart
       &-count
         background-color: $btn-orange
