--- a/src/styles/banner.sass
+++ b/src/styles/banner.sass
@@ -15,7 +15,7 @@
     @media (max-width: 1300px)
       width: 100%
     &__item
-      height: 440px
+      height: 440px !important
       border-radius: 6px
       @media (max-width: 1300px)
         height: 500px
@@ -80,6 +80,8 @@
       display: flex
       align-items: center
       justify-content: center
+      width: 100%
+      gap: 5px
   &-stock
     width: 20%
     background-color: #fff1e6
