--- a/src/pug/components/products.pug
+++ b/src/pug/components/products.pug
@@ -1,6 +1,350 @@
+-
+  var sections = [
+    { name: 'Костюмы', link: '' },
+    { name: 'Экипировка с подогревом', link: '' },
+    { name: 'Обувь', link: '' },
+    { name: 'Одежда детская', link: '' },
+    { name: 'Термобельё', link: '' },
+    {name: 'Жилеты', link: ''},
+    {name: 'Брюки и шорты', link: ''},
+    {name: 'Куртки, толстовки и плащи', link: ''},
+    {name: 'Солнцезащитный очки', link: ''},
+    {name: 'Футболки и рубашки', link: ''},
+    {name: 'Носки', link: ''},
+    {name: 'Головные уборы', link: ''},
+    {name: 'Перчатки, варешки и рукавицы', link: ''},
+    {name: 'Ремни', link: ''},
+    {name: 'Нижнее бельё', link: ''},
+    {name: 'Маски и очки снегоходные', link: ''},
+    {name: 'Вейдерсы, сапоги и ботинки забродные', link: ''},
+    {name: 'Вейдерсы, сапоги и ботинки забродные', link: ''},
+    {name: 'Патчи на одежду', link: ''},
+    {name: 'Защитные маски для лица и антисептики', link: ''},
+  ]
+  var catalogProducts = [
+    {
+      new: true,
+      discount: 10,
+      inStock: false,
+      name: 'Ботинки тактические мембранные Кобра коричневые',
+      favorite: true,
+      price: "4 900",
+      discountPrice: "4 410",
+      points: 20,
+      preview: 'assets/images/other/products/1.png'
+    },
+    {
+      new: true,
+      discount: 0,
+      inStock: true,
+      name: 'Куртка-рубашка Remington Champion New Red р. L',
+      favorite: false,
+      price: "5 190",
+      discountPrice: "0",
+      points: 40,
+      preview: './assets/images/other/products/2.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Лодка надувная Тонар Бриз 190 (гребки + жесткое сиденье)...',
+      favorite: false,
+      price: "11 830",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/3.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Вода питьевая артезианская газированная... 1 л',
+      favorite: false,
+      price: "45",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/4.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: true,
+      discount: 10,
+      inStock: false,
+      name: 'Ботинки тактические мембранные Кобра коричневые',
+      favorite: true,
+      price: "4 900",
+      discountPrice: "4 410",
+      points: 20,
+      preview: 'assets/images/other/products/1.png'
+    },
+    {
+      new: true,
+      discount: 0,
+      inStock: true,
+      name: 'Куртка-рубашка Remington Champion New Red р. L',
+      favorite: false,
+      price: "5 190",
+      discountPrice: "0",
+      points: 40,
+      preview: './assets/images/other/products/2.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Лодка надувная Тонар Бриз 190 (гребки + жесткое сиденье)...',
+      favorite: false,
+      price: "11 830",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/3.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Вода питьевая артезианская газированная... 1 л',
+      favorite: false,
+      price: "45",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/4.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+    {
+      new: false,
+      discount: 0,
+      inStock: true,
+      name: 'Уголь кусковой древесный 800 Degrees Lump Charcoal, мешок 3',
+      favorite: false,
+      price: "590",
+      discountPrice: "0",
+      points: 0,
+      preview: './assets/images/other/products/5.png'
+    },
+  ]
+
 .catalog-products
   .catalog-products__wrap
     .catalog-products__tags
+      .catalog-products__tags-items
+        each item in sections
+          a.catalog-products__tags-item( href=item.link )= item.name
     .catalog-products__settings
+      .catalog-products__settings-content
+        .catalog-products__settings-sort
+          select.select
+            option( value="0" ) по названию
+            option( value="1" ) по популярности
+            option( value="2" ) по цене
+        .catalog-products__settings-view
+          .catalog-products__settings-radio
+            input( type="radio" name="catalog-view" id="paw" checked )
+            label( for="paw" )
+              svg( width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" )
+                rect(x="4" y="4" width="5" height="5" rx="1" fill="#D1D2D4")
+                rect(x="11" y="4" width="5" height="5" rx="1" fill="#D1D2D4")
+                rect(x="4" y="11" width="5" height="5" rx="1" fill="#D1D2D4")
+                rect(x="11" y="11" width="5" height="5" rx="1" fill="#D1D2D4")
+          .catalog-products__settings-radio
+            input( type="radio" name="catalog-view" id="string" )
+            label( for="string" )
+              svg(width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg")
+                rect(x="2" y="5" width="4" height="3" rx="1" fill="#D1D2D4")
+                rect(x="8" y="5" width="10" height="3" rx="1" fill="#D1D2D4")
+                rect(x="2" y="12" width="4" height="3" rx="1" fill="#D1D2D4")
+                rect(x="8" y="12" width="10" height="3" rx="1" fill="#D1D2D4")
     .catalog-products__items
-    .catalog-products__show-more
+      each product in catalogProducts
+        .product-card
+          .product-card__top
+            .product-card__labels
+              if product.new
+                .product-card__new Новинка
+              if product.discount
+                .product-card__discount= '-' + product.discount + '%'
+            if product.favorite
+              .product-card__favorite.active
+                svg(
+                  width="18",
+                  height="16",
+                  viewBox="0 0 18 16",
+                  fill="none",
+                  xmlns="http://www.w3.org/2000/svg"
+                )
+                  path(
+                    d="M4.04544 0.833269L4.04651 0.832942C5.84615 0.283932 6.91633 1.04865 8.28554 2.02706C8.39657 2.1064 8.50957 2.18714 8.62508 2.2687C8.84969 2.4273 9.14979 2.42742 9.37452 2.26899C9.48888 2.18837 9.60077 2.10857 9.71073 2.03014C11.0817 1.05234 12.152 0.289014 13.9472 0.833268C16.8519 1.71392 17.9571 4.69123 17.0351 7.39934C16.5046 8.83544 15.6353 10.1403 14.4908 11.2133C12.8189 12.7419 10.9782 14.0953 9.00058 15.2497C7.02295 14.0953 5.1823 12.7419 3.51037 11.2133C2.3659 10.1403 1.49658 8.83543 0.966052 7.39932C0.0434705 4.68956 1.14221 1.71347 4.04544 0.833269Z",
+                    fill="white",
+                    stroke="#0F0F0F",
+                    stroke-width="1.3",
+                    stroke-linecap="round",
+                    stroke-linejoin="round"
+                  )
+            else
+              .product-card__favorite
+                svg(
+                  width="18",
+                  height="16",
+                  viewBox="0 0 18 16",
+                  fill="none",
+                  xmlns="http://www.w3.org/2000/svg"
+                )
+                  path(
+                    d="M4.04544 0.833269L4.04651 0.832942C5.84615 0.283932 6.91633 1.04865 8.28554 2.02706C8.39657 2.1064 8.50957 2.18714 8.62508 2.2687C8.84969 2.4273 9.14979 2.42742 9.37452 2.26899C9.48888 2.18837 9.60077 2.10857 9.71073 2.03014C11.0817 1.05234 12.152 0.289014 13.9472 0.833268C16.8519 1.71392 17.9571 4.69123 17.0351 7.39934C16.5046 8.83544 15.6353 10.1403 14.4908 11.2133C12.8189 12.7419 10.9782 14.0953 9.00058 15.2497C7.02295 14.0953 5.1823 12.7419 3.51037 11.2133C2.3659 10.1403 1.49658 8.83543 0.966052 7.39932C0.0434705 4.68956 1.14221 1.71347 4.04544 0.833269Z",
+                    fill="white",
+                    stroke="#0F0F0F",
+                    stroke-width="1.3",
+                    stroke-linecap="round",
+                    stroke-linejoin="round"
+                  )
+          .product-card__img
+            img(src=product.preview)
+          .product-card__stock
+            if product.inStock
+              img(src="assets/images/other/in-stock.svg")
+              span Товар в наличии
+            else
+              img(src="assets/images/other/not-stock.svg")
+              span Нет в наличии
+          .product-card__name= product.name
+          .product-card__bottom
+            .product-card__price
+              if product.discount
+                .product-card__price-old= product.price + ' ₽'
+                .product-card__price-new= product.discountPrice + ' ₽'
+              else
+                .product-card__price-standard= product.price + ' ₽'
+            if product.points
+              .product-card__points
+                .product-card__points-logo Б
+                .product-card__points-val= product.points
+            if product.inStock
+              a.product-card__btn.btn Купить
+            else
+              a.product-card__btn.btn.disabled Сообщить о поставке
+    .catalog-products__show-more Показать еще
+    .catalog-products__bottom
+      .catalog-products__pagination
+        .catalog-products__pagination-left.catalog-products__pagination-arrow
+          svg(width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg")
+            path(d="M9.33203 0.777344L3.10981 6.99957L9.33203 13.2218" stroke="#9E9E9E" stroke-width="1.5" stroke-linecap="round")
+        .catalog-products__pagination-items
+          .catalog-products__pagination-item.active 1
+          .catalog-products__pagination-item 2
+          .catalog-products__pagination-item 3
+          .catalog-products__pagination-item 4
+          .catalog-products__pagination-item 5
+        .catalog-products__pagination-right.catalog-products__pagination-arrow
+          svg(width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg")
+            path(d="M4.66797 0.777344L10.8902 6.99957L4.66797 13.2218" stroke="#0F0F0F" stroke-width="1.5" stroke-linecap="round")
+      .catalog-products__count
+        select.select
+          option( value=0 ) Показывать по 30
+          option( value=1 ) Показывать по 60
+          option( value=2 ) Показывать по 90
+    .catalog-products__desc
+      p Одежда для охоты, рыбалки, туризма отличается особым кроем, множеством функциональных особенностей и особыми свойствами материала, который, как правило, имеет ветронепродуваемые, влагоотводящие и водонепроницаемые свойства.
+      p Одежду в интернет-магазине вы можете найти следующих категорий:
+      ul
+        li Костюмы для охоты
+        li Костьюмы для рыбалки
+        li Куртки для охоты
+      p Модели охотничьих костюмов, курток и комбинезонов созданы из тканей, устойчивых к разрывам и истиранию, помимо маскировочных свойств имеют усиления на коленях и локтях. Ассортимент термобелья для охоты и рыбалки удовлетворит самых требовательных покупателей.
