--- a/src/styles/MobilMenu.sass
+++ b/src/styles/MobilMenu.sass
@@ -94,7 +94,7 @@
       bottom: 0
       z-index: 10
       background: #ffffff
-      transform: translateX(+110%)
+      transform: translateX(120%)
       transition-duration: 0.3s
       transition-timing-function: ease
       transition-property: opacity, transform
