--- a/src/styles/catalog.sass
+++ b/src/styles/catalog.sass
@@ -4,7 +4,13 @@
     font-weight: 600
     font-size: 30px
     color: #0f0f0f
+    @media (max-width: 500px)
+      font-size: 24px
   &-content
     margin-top: 40px
+    margin-bottom: 80px
     display: flex
+    gap: 20px
     flex-direction: row
+    @media (max-width: 1300px)
+      flex-direction: column
