--- a/src/styles/filter.sass
+++ b/src/styles/filter.sass
@@ -22,6 +22,8 @@
     border-radius: 6px
     width: 295px
     max-height: 320px
+    @media (max-width: 1300px)
+      width: 100%
     &-color
       width: 18px
       height: 18px
@@ -40,6 +42,7 @@
     font-weight: 600
     font-size: 16px
     color: #0f0f0f
+    cursor: pointer
     &-arrow
       transition: all .3s
     &.active
