--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -48,6 +48,13 @@ a
   &:hover
     color: $btn-orange
 
+p,
+li
+  font-weight: 400
+  font-size: 16px
+  line-height: 150%
+  color: #0f0f0f
+
 
 .content
   flex: 1 0 auto
@@ -57,6 +64,10 @@ a
   padding: 0 30px
   margin: 0 auto
   position: relative
+  @media (max-width: 600px)
+    padding: 0 20px
+  @media (max-width: 370px)
+    padding: 10px
 
 .btn
   padding: 15px 35.5px
@@ -307,3 +318,15 @@ a
   &::-webkit-scrollbar-thumb
     background-color: #FBBC2B
     border-radius: 20px
+
+.select
+  min-width: 240px
+  .selectize-input
+    font-weight: 400
+    font-size: 14px
+    color: #0f0f0f
+    background: #ffffff
+    border: 1px solid #eaeaea
+    border-radius: 3px
+    padding: 12px 15px
+    box-shadow: none
