Десктопная и мобильная версия детальной страницы товара

--- a/src/pug/pages/section.pug
+++ b/src/pug/pages/section.pug
@@ -2,6 +2,7 @@ extends ../layout/main
 
 append variables
   - var title = 'Каталог';
+  - var bread = [ { text: 'Главная', link: '/' }, { text: 'Одежда для охоты и рыбалки', link: '/section.html' } ]
 
 block content
   main.main
