--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -55,6 +55,16 @@ li
   line-height: 150%
   color: #0f0f0f
 
+table
+  border-spacing: 0
+  border-collapse: collapse
+  td
+    padding: 14px 15px
+  tr:nth-child(1n)
+    background-color: rgba(234, 234, 234, 0.5)
+  tr:nth-child(2n)
+    background-color: #f8f8f8
+
 
 .content
   flex: 1 0 auto
