Мобильная и десктопная версия корзины

--- a/src/pug/components/catalog.pug
+++ b/src/pug/components/catalog.pug
@@ -1,7 +1,7 @@
 .catalog
   .container
     .catalog-wrap
-      h2.catalog-title Одежда для охоты и рыбалки
+      h2.page-title Одежда для охоты и рыбалки
       .catalog-content
         .catalog-left
           include ./filter
