--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -89,6 +89,11 @@ table
   font-size: 16px
   display: inline-block
   text-align: center
+  &.white
+    background-color: $white
+    border: 1px solid $btn-orange
+    &:hover
+      background-color: $btn-orange
   &.disabled
     background-color: #eaeaea
     color: #737373
@@ -288,6 +293,8 @@ table
   font-size: 16px
   color: #0f0f0f
   margin-right: 19px
+  gap: 6px
+  align-items: center
   input[type='checkbox']
     display: none
   input + span
@@ -296,7 +303,6 @@ table
     border-radius: 2px
     min-width: 18px
     height: 18px
-    margin: 0 14px 0 0
     display: inline-flex
     align-items: center
     justify-content: center
@@ -340,3 +346,53 @@ table
     border-radius: 3px
     padding: 12px 15px
     box-shadow: none
+
+.page-title
+  font-weight: 600
+  font-size: 30px
+  color: #0f0f0f
+  @media (max-width: 500px)
+    font-size: 24px
+
+/* The switch - the box around the slider */
+.switch
+  position: relative
+  display: inline-block
+  width: 60px
+  height: 34px
+  input
+    display: none
+    &:checked + .slider
+      background-color: $btn-orange
+    &:focus + .slider
+      box-shadow: 0 0 1px $btn-orange
+    &:checked + .slider:before
+      -webkit-transform: translateX(26px)
+      -ms-transform: translateX(26px)
+      transform: translateX(26px)
+
+/* The slider */
+.slider
+  position: absolute
+  cursor: pointer
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  background-color: #ccc
+  -webkit-transition: .4s
+  transition: .4s
+  &:before
+    position: absolute
+    content: ""
+    height: 26px
+    width: 26px
+    left: 4px
+    bottom: 4px
+    background-color: white
+    -webkit-transition: .4s
+    transition: .4s
+  &.round
+    border-radius: 34px
+    &:before
+      border-radius: 50%
