--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -396,3 +396,12 @@ table
     border-radius: 34px
     &:before
       border-radius: 50%
+
+.custom-input
+  background-color: $white
+  padding: 15px
+  font-weight: 400
+  font-size: 16px
+  color: #9e9e9e
+  border: 1px solid #d1d2d4
+  border-radius: 3px
