Страница завершения заказа и страница контакты

--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -16,6 +16,7 @@ html
     +style('common.css')
     +style('MenuCatalog.css')
     +style('MobilMenu.css')
+    script(src="https://api-maps.yandex.ru/v3/?apikey=d5735d2b-1be0-46d7-a37a-9ad42ec40288&lang=ru_RU")
     block styles
   body
     .content
