--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -397,7 +397,8 @@ table
     &:before
       border-radius: 50%
 
-.custom-input
+.custom-input,
+.custom-textarea
   background-color: $white
   padding: 15px
   font-weight: 400
