--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -403,6 +403,87 @@ table
   padding: 15px
   font-weight: 400
   font-size: 16px
-  color: #9e9e9e
+  color: #000000
   border: 1px solid #d1d2d4
   border-radius: 3px
+
+.footer
+  &-form
+    background-color: #ffffff
+    margin-top: 40px
+    border-radius: 10px
+    box-shadow: 0 20px 40px 0 rgba(15, 15, 15, 0.08)
+    padding: 50px 40px
+    @media (max-width: 500px)
+      padding: 30px 10px
+    &__wrap
+      display: flex
+      justify-content: space-between
+    &__left
+      width: 60%
+      @media (max-width: 900px)
+        width: 100%
+    &__right
+      width: 30%
+      @media (max-width: 900px)
+        display: none
+    &__title
+      font-weight: 600
+      font-size: 30px
+      color: #0f0f0f
+    &__content
+      margin-top: 40px
+      display: flex
+      flex-direction: column
+      gap: 20px
+    &__inputs
+      display: flex
+      gap: 20px
+      @media (max-width: 650px)
+        flex-direction: column
+    &__input
+      display: flex
+      flex-direction: column
+      gap: 10px
+      width: 100%
+      &-title
+        font-weight: 400
+        font-size: 16px
+        color: #0f0f0f
+    &__btns
+      display: flex
+      gap: 30px
+      align-items: center
+      @media (max-width: 1020px)
+        flex-direction: column
+        align-items: start
+      @media (max-width: 900px)
+        flex-direction: row
+        align-items: center
+      @media (max-width: 650px)
+        flex-direction: column
+        align-items: start
+    &__attach
+      display: flex
+      gap: 5px
+      align-items: center
+      font-weight: 400
+      font-size: 16px
+      line-height: 100%
+      text-align: center
+      color: #737373
+    &__docs
+      font-weight: 400
+      font-size: 14px
+      line-height: 100%
+      color: #9e9e9e
+    &__privacy
+      font-weight: 400
+      font-size: 14px
+      line-height: 140%
+      color: #737373
+      a
+        font-weight: 600
+        border-bottom: 1px solid #737373
+        &:hover
+          border-bottom: 1px solid #e9a100
