--- a/src/styles/partials/header.sass
+++ b/src/styles/partials/header.sass
@@ -96,6 +96,10 @@
     a
       color: $black
     &__cart
+      transition: all .3s
+      border-radius: 3px
+      &:hover
+        background-color: #f0f0f0
       &-count
         background-color: $btn-orange
         border-radius: 100%
