--- a/src/styles/banner.sass
+++ b/src/styles/banner.sass
@@ -5,12 +5,13 @@
   &-wrap
     display: flex
     justify-content: space-between
+    gap: 20px
     @media (max-width: 1300px)
       flex-direction: column
       gap: 20px
   &-banner
     position: relative
-    width: 75%
+    width: 78%
     overflow: hidden
     @media (max-width: 1300px)
       width: 100%
