--- a/src/pug/pages/news.pug
+++ b/src/pug/pages/news.pug
@@ -2,7 +2,7 @@ extends ../layout/main.pug
 
 append variables
   - var title = 'Новости';
-  - var bread = [ { text: 'Главная', link: '/' }, { text: 'Контакты', link: '/contacts.html' } ]
+  - var bread = [ { text: 'Главная', link: '/' }, { text: 'Новости', link: '/news.html' } ]
 
 block content
   main.main
