--- a/src/styles/products.sass
+++ b/src/styles/products.sass
@@ -83,6 +83,7 @@
     border: 1px solid #eaeaea
     border-radius: 3px
     margin-top: 40px
+    max-height: 50px
   &__bottom
     display: flex
     justify-content: space-between
