--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -158,6 +158,18 @@ table
   background-color: $white
   @media (max-width: 1200px)
     height: 430px
+  &__evaluation
+    display: flex
+    gap: 5px
+    margin-top: 5px
+    align-items: center
+    @media (max-width: 550px)
+      flex-direction: column
+      align-items: start
+    &-reviews
+      font-weight: 400
+      font-size: 14px
+      color: #737373
   &__name
     font-weight: 600
     font-size: 16px
