--- a/src/pug/components/products.pug
+++ b/src/pug/components/products.pug
@@ -31,7 +31,7 @@
       price: "4 900",
       discountPrice: "4 410",
       points: 20,
-      preview: 'assets/images/other/products/1.png'
+      preview: 'assets/images/other/product-img/1.jpg'
     },
     {
       new: true,
