--- a/src/pug/partials/header.pug
+++ b/src/pug/partials/header.pug
@@ -41,7 +41,7 @@ header.header
             button.header__search-btn.btn
               img(src="assets/images/other/search.svg")
         .header-bottom__right
-          .header-bottom__auth.header-bottom__right-item
+          #open-auth.header-bottom__auth.header-bottom__right-item
             img(src="assets/images/other/profile.svg")
             span Войти
           .header-bottom__favorite.header-bottom__right-item
