--- a/src/styles/products.sass
+++ b/src/styles/products.sass
@@ -113,6 +113,9 @@
     &-items
       display: flex
       justify-content: center
+      transition: all .3s
+      &:hover
+        color: #000 !important
     &-item
       width: 42px
       height: 42px
