--- a/src/styles/MainSections.sass
+++ b/src/styles/MainSections.sass
@@ -4,9 +4,19 @@
   margin-top: 20px
   &__items
     overflow: hidden
+    display: grid
+    grid-template-columns: repeat(5, 1fr)
+    gap: 20px
+    @media (max-width: 900px)
+      grid-template-columns: repeat(4, 1fr)
+    @media (max-width: 750px)
+      grid-template-columns: repeat(3, 1fr)
+    @media (max-width: 550px)
+      grid-template-columns: repeat(2, 1fr)
+      gap: 10px
   &__item
     position: relative
-    width: 190px
+    width: 100%
     height: 220px
     border-radius: 6px
     display: flex
