--- a/src/styles/Stocks.sass
+++ b/src/styles/Stocks.sass
@@ -13,8 +13,10 @@
     background-color: $white
     &__img
       width: 100%
+      max-height: 192px
       img
         width: 100%
+        max-height: 192px
     &__more
       position: absolute
       bottom: 20px
