--- a/src/styles/catalog-detail.sass
+++ b/src/styles/catalog-detail.sass
@@ -36,8 +36,12 @@
         width: 100px
         height: 100px
         border: 1px solid transparent
+        max-width: 100px
+        max-height: 100px
         &.swiper-slide-thumb-active
           border: 1px solid #fcb514
+          border-radius: 6px
+        img
           border-radius: 6px
   &__right
     &-top
