--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -45,8 +45,8 @@ a
   font-size: inherit
   transition: all .3s
   cursor: pointer
-  &:hover
-    color: $btn-orange
+  // &:hover
+  //   color: $btn-orange
 
 p,
 li
@@ -89,6 +89,11 @@ table
   font-size: 16px
   display: inline-block
   text-align: center
+  &:disabled
+    background: #eaeaea
+    color: #737373
+    &:hover
+      background: #a2a2a2
   &.white
     background-color: $white
     border: 1px solid $btn-orange
@@ -158,6 +163,8 @@ table
   background-color: $white
   @media (max-width: 1200px)
     height: 430px
+  @media (max-width: 500px) 
+    padding: 15px 5px
   &__evaluation
     display: flex
     gap: 5px
@@ -197,6 +204,7 @@ table
           fill: #ff3b3b
           stroke: #ff3b3b
   &__img
+    height: 200px
     img
       width: 100%
       box-sizing: border-box
